[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pollen_data_tools"
version = "0.1.0"
description = "Tools for processing fossil pollen data."
authors = [
    { name="Elli Kiiski", email="kiiski.elli@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "requests",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/ellikiiski/Fossil-pollen-climate-reconstruction-tools"

[tool.setuptools.packages.find]
where = ["src"]